--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
 
             <p id="explanation">Explanation</p>
 
+            <img src="doryto.png" alt="doryto" class="doryto" width="150" height="125" style="display:none">
+
 
 
 
